--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -142,9 +142,7 @@
         },
       });
 
-      const pos = {x: 6, y: 4};
-      dmg.grid.createTile({pos, kind: 'char', classList: ['mover', 'solid', 'input'], text: '@'});
-      dmg.grid.viewPoint = pos;
+      dmg.grid.createTile({pos: {x: 6, y: 4}, kind: 'char', classList: ['mover', 'solid', 'input'], text: '@'});
 
     </script>
   </body>
