[cdom-template] add escape note

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -21,6 +21,9 @@
 
         <section>
           <h1>Cascading DOMgeon Template</h1>
+          <p>
+            Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
+          </p>
         </section>
 
         <fieldset>
