NOTE full 9-key movepad

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -65,7 +65,28 @@
 
     </aside>
 
-    <div class="buttonbar moves left"></div>
+    <div class="buttonbar moves left">
+      <!--
+      <table>
+        <tr>
+          <td><button data-key="q" data-legend="Q" data-movedir="-1,-1">NW</button></td>
+          <td><button data-key="w" data-legend="W" data-movedir="0,-1">N</button></td>
+          <td><button data-key="e" data-legend="E" data-movedir="1,-1">NE</button></td>
+        </tr>
+        <tr>
+          <td><button data-key="a" data-legend="A" data-movedir="-1,0">W</button></td>
+          <td><button data-key="s" data-legend="S" data-movedir="0,0">.</button></td>
+          <td><button data-key="d" data-legend="D" data-movedir="1,0">E</button></td>
+        </tr>
+        <tr>
+          <td><button data-key="z" data-legend="Z" data-movedir="-1,1">SW</button></td>
+          <td><button data-key="x" data-legend="X" data-movedir="0,1">S</button></td>
+          <td><button data-key="c" data-legend="C" data-movedir="1,1">SE</button></td>
+        </tr>
+      </table>
+      -->
+    </div>
+
     <div class="buttonbar actions right float"></div>
 
     <script type="module" src="./index.js"></script>
