[cdom-template] move and collapse TODO list

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -24,18 +24,16 @@
           <p>
             Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
           </p>
+          <details>
+            <summary>TODO</summary>
+            <ul>
+              <li>the void should be an other plane...</li>
+              <li>things to find and do there</li>
+              <li>...how to return back to the solid plane?</li>
+              <li>maybe inventory and items</li>
+            </ul>
+          </details>
         </section>
-
-        <fieldset>
-          <legend>TODO:</legend>
-          <ul>
-            <li>the void should be an other plane...</li>
-            <li>things to find and do there</li>
-            <li>...how to return back to the solid plane?</li>
-            <li>maybe inventory and items</li>
-          </ul>
-        </fieldset>
-
 
         <fieldset id="inspector">
           <legend>
