[cdom] add separate --fov from --light

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -84,11 +84,11 @@
           text-decoration-style: dotted;
         }
 
-        .tile.solid[data-light] {
+        .tile.solid[data-fov] {
           visibility: visible;
           opacity: var(--light);
         }
-        .tile.solid:not([data-light]) { visibility: hidden; }
+        .tile.solid:not([data-fov]) { visibility: hidden; }
 
       </style>
       <div class="grid">
