[jspit/dla] add ambient and live particle light

--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -185,6 +185,9 @@
         }
         .grid.playing .tile.particle:not([data-light]) { visibility: hidden; }
 
+        .tile.particle      { --lightAmbient: 0.2; }
+        .tile.particle.live { --lightInit:    4.0; }
+
       </style>
 
     </main>
