[jspit/dla] only light interior live particles

--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -185,8 +185,8 @@
         }
         .grid.playing .tile.particle:not([data-fov]) { visibility: hidden; }
 
-        .tile.particle      { --lightAmbient: 0.2; }
-        .tile.particle.live { --lightInit:    4.0; }
+        .tile.particle { --lightAmbient: 0.2; }
+        .tile.particle.prime.live { --lightInit: 4.0; }
 
       </style>
 
