[cdom-template] add a sticky Escape button

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -13,6 +13,12 @@
 
     <main>
       <aside class="menu modal">
+        <button
+          class="sticky"
+          style="float: right; font-size: 2em; line-height: 0.75"
+          data-keycode="Escape"
+          title="Start/Stop Game ; Hide/Show Menu">␛</button>
+
         <noscript>
           <section>
             <h3 class="error">DOMgeoneering requires JavaScript</h3>
