[cdom] drop header/footer/body.showUI/aside.modal convention

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -8,9 +8,6 @@
   </head>
   <body>
 
-    <header>
-    </header>
-
     <main>
       <div class="grid">
         <noscript>
@@ -20,7 +17,7 @@
         </noscript>
       </div>
 
-      <aside class="menu modal">
+      <aside class="menu">
         <button
           class="sticky"
           style="float: right; font-size: 2em; line-height: 0.75"
