--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -8,8 +8,6 @@
   </head>
   <body>
 
-    <header></header>
-
     <main>
       <div class="grid">
         <noscript>
@@ -19,7 +17,7 @@
         </noscript>
       </div>
 
-      <aside class="modal">
+      <aside class="menu">
         <button
           class="sticky"
           style="float: right; font-size: 1.5em"
