--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -9,9 +9,6 @@
   </head>
   <body>
 
-    <header>
-    </header>
-
     <main>
 
       <div class="grid">
@@ -50,7 +47,7 @@
         .tile.particle.prime.live { --lightInit: 4.0; }
       </style>
 
-      <aside class="menu modal">
+      <aside class="menu">
         <button
           class="sticky"
           style="float: right; font-size: 1.5em"
@@ -201,10 +198,6 @@
     <div class="buttonbar actions right float">
       <button data-key="@" title="Drop Player">@</button>
     </div>
-
-    <footer style="margin: 0 auto; width: 33%">
-    </footer>
-
 
     <script type="module">
       import DLA from './dla'; // TODO default
