--- a/jspit/physarum.html
+++ b/jspit/physarum.html
@@ -8,9 +8,6 @@
   </head>
   <body>
 
-    <header>
-    </header>
-
     <main>
 
       <div class="grid">
@@ -22,7 +19,7 @@
         <div id="status"></div>
       </div>
 
-      <aside class="menu modal">
+      <aside class="menu">
         <button
           class="sticky"
           style="float: right; font-size: 1.5em"
@@ -106,9 +103,6 @@
         }
       </style>
     </main>
-
-    <footer>
-    </footer>
 
     <script type="module">
       import Physarum from './physarum';
