[jspit] cleanup headers, collecting them at the top
Back nav link was sometimes difficult to find, esp. on the dla page.

--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -26,11 +26,10 @@
           data-keycode="Backspace">Reset</button>
 
         <section>
-          <h1 align="center">Welcome traveler</h1>
+          <h1>Welcome traveler</h1>
+          <h3><a href="index.html">Back to Welcome screen</a></h3>
 
-          <h2>
-            Boop a color, get a color!
-          </h2>
+          <h3>Boop a color, get a color!</h3>
 
           <p>
             This is the first and simplest example of jspit's <code>TileGrid</code>.
@@ -43,10 +42,6 @@
           </legend>
           <textarea readonly style="border: none; resize: none; user-select: all; width: 100%;"></textarea>
         </fieldset>
-
-        <div style="float: right">
-          <h3><a href="index.html">Back to Welcome screen</a></h3>
-        </div>
 
       </aside>
       <div class="grid"></div>
