--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -36,9 +36,8 @@
         </noscript>
 
         <section>
-          <h1>
-            Diffusion Limited Aggregation
-          </h1>
+          <h1>Diffusion Limited Aggregation</h1>
+          <h3><a href="index.html">Back to Welcome screen</a></h3>
 
           <p>
             This is actually a dual random walker and diffusion limited
@@ -163,10 +162,6 @@
             <li><a href="//paulbourke.net/fractals/dla/">Paul Boruke, reference from DonKarlssonSan</a></li>
           </ul>
 
-        </section>
-
-        <section>
-          <h3><a href="index.html">Back to Welcome screen</a></h3>
         </section>
 
       </aside>
