--- a/jspit/physarum.html
+++ b/jspit/physarum.html
@@ -20,9 +20,8 @@
         </noscript>
 
         <section>
-          <h1>
-            Physarum Inspired Demo
-          </h1>
+          <h1>Physarum Inspired Demo</h1>
+          <h3><a href="index.html">Back to Welcome screen</a></h3>
 
           Inspired by <a href="//www.sagejenson.com/physarum">Physarum blog post by Sage Jenson</a>
 
@@ -55,10 +54,6 @@
 
           <label for="singleStep"><input id="singleStep" type="checkbox" /> SingleStep</label>
           <button id="reset">Reset</button>
-        </section>
-
-        <section style="float: right">
-          <h3><a href="index.html">Back to Welcome screen</a></h3>
         </section>
 
       </aside>
