[jspit] collect and hoist main content over aside
- makes document order align better for eventual use of flexbox
- collects main content towards a message/status area convention

--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -11,6 +11,14 @@
     <header></header>
 
     <main>
+      <div class="grid">
+        <noscript>
+          <section>
+            <h3 class="error">A world without JavaScript is lacking in color...</h3>
+          </section>
+        </noscript>
+      </div>
+
       <aside class="modal">
         <button
           class="sticky"
@@ -44,7 +52,6 @@
         </fieldset>
 
       </aside>
-      <div class="grid"></div>
     </main>
 
     <div class="buttonbar moves left"></div>
