--- a/jspit/physarum.html
+++ b/jspit/physarum.html
@@ -12,12 +12,17 @@
     </header>
 
     <main>
-      <aside class="menu modal">
+
+      <div class="grid">
         <noscript>
           <section>
             <h3 class="error">Insufficient JavaScript to evolve...</h3>
           </section>
         </noscript>
+        <div id="status"></div>
+      </div>
+
+      <aside class="menu modal">
 
         <section>
           <h1>Physarum Inspired Demo</h1>
@@ -57,8 +62,7 @@
         </section>
 
       </aside>
-      <div class="grid">
-      </div>
+
       <style>
         .tile.trail {
           z-index: 0;
@@ -122,7 +126,7 @@
         grid: document.querySelector('main .grid'),
       });
 
-      const status = document.querySelector('footer');
+      const status = document.querySelector('#status');
       const sim = window.sim = new Physarum(dmg, status);
 
       document.querySelector('#singleStep')
