[jspit] standardize run/esc and reset/bs buttons

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -25,7 +25,7 @@
           class="sticky"
           style="float: right; font-size: 2em; line-height: 0.75"
           data-keycode="Escape"
-          title="Start/Stop Game ; Hide/Show Menu">␛</button>
+          title="Start/Stop Game ; Hide/Show Menu">☰</button>
 
         <section>
           <h1>Cascading DOMgeon Template</h1>
