--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -25,7 +25,7 @@
           style="float: right; font-size: 1.5em"
           title="Start/Stop Game ; Hide/Show Menu"
           data-legend="Esc"
-          data-keycode="Escape">Run</button>
+          data-keycode="Escape">☰</button>
 
         <section>
           <h1>Welcome traveler</h1>
