--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -57,7 +57,7 @@
           style="float: right; font-size: 1.5em"
           title="Start/Stop Simulation ; Hide/Show Menu"
           data-legend="Esc"
-          data-keycode="Escape">Run</button>
+          data-keycode="Escape">☰</button>
 
         <section>
           <h1>Diffusion Limited Aggregation</h1>
