WIP [cdom-template] a help button

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -47,6 +47,11 @@
         data-key="@"
         title="Toggle playing state">@</button>
 
+      <button
+        style="float: right; font-size: 2em; line-height: 0.75"
+        data-key="?"
+        title="Show help overview">?</button>
+
       <section>
         <h1>Cascading DOMgeon Template</h1>
 
