[cdom-template] default light to 0

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -90,7 +90,7 @@
 
         .tile[data-fov] {
           visibility: visible;
-          opacity: var(--light);
+          opacity: var(--light, 0);
         }
         .tile:not([data-fov]) { visibility: hidden; }
 
